i give up, fine i'll do websockets only, tho only a wee later not rn im tried of this pice of shit

--- a/WebClient/libTrinity_Demo.html
+++ b/WebClient/libTrinity_Demo.html
@@ -20,7 +20,7 @@
         <script src="../root/js/dynamicsn.js"></script>
         <script src="https://sirio-network.com/root/js/dynamicsn.js"></script>
         <!-- Sirio Network API -->
-        <script src="SN-API_Client.js"></script> 
+        <script src="libTrinity.js"></script> 
         <script src="https://sirio-network.com/root/js/SN-API_Client.js"></script> 
         <script src="SN-API_Hook.js"></script> 
         <script src="https://sirio-network.com/root/js/SN-API_Hook.js"></script> 
